# comfyui-text-line-selector

./: LICENSE  README.md  __init__.py  pyproject.toml  text-line-selector-example.json  text_line_selector.py
web/js/: lineSelector.js
